--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UnitConversion">
-        <activity android:name=".TempActivity"></activity>
+        <activity android:name=".DataActivity"></activity>
+        <activity android:name=".AngleActivity" />
+        <activity android:name=".TempActivity" />
         <activity android:name=".TimeActivity" />
         <activity android:name=".WeightActivity" />
         <activity android:name=".LengthActivity" />
