--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UnitConversion">
-        <activity android:name=".DataActivity"></activity>
-        <activity android:name=".AngleActivity" />
-        <activity android:name=".TempActivity" />
-        <activity android:name=".TimeActivity" />
-        <activity android:name=".WeightActivity" />
-        <activity android:name=".LengthActivity" />
-        <activity android:name=".MainActivity2" />
+
+        <activity android:name=".MainActivity2"
+            />
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
